--- a/index.css
+++ b/index.css
@@ -340,8 +340,40 @@ justify-content: space-around;
     justify-content: center;
 }
 @media only screen and (max-width: 1280px) {
-    .one{
-        margin-left: 1rem;
+    html{
+        font-size: 75%;
+    }
+    
+      .e1 {
+        margin-left: -9rem;
+        margin-top: -19rem;
+    }
+    .e2 {
+        margin-left: -13rem;
+        margin-top: -16rem;
+    }
+    .g198 {
+        margin-top: -27rem;
+        margin-left: -14rem;
+    }
+    .g20 {
+        margin-left: 5rem;
+        margin-top: -14rem;
+    }
+    .g350 {
+        margin-top: -13rem;
+    }
+    .gs {
+        margin-top: -17rem;
+        margin-left: -26rem;
+    }
+    .ge {
+        margin-top: -22rem;
+        margin-left: -1rem;
+    }
+    .gb {
+        margin-top: -8rem;
+        margin-left: -5rem;
     }
 }
 
@@ -434,6 +466,17 @@ justify-content: space-around;
       .two{
           flex-direction: column;
       }
+      .map1{
+          margin-left: -4rem;
+      }
+      .map2{
+        margin-top: -20rem;
+        margin-left: 12rem;
+      }
+      .two div:nth-child(1) img:nth-child(3) {
+        position: relative;
+        margin-right: -28rem;
+    }
       .e1 {
         margin-left: -17rem;
         margin-top: -22rem;
@@ -472,7 +515,7 @@ justify-content: space-around;
         font-size: 1.4rem;
     }
     .three1{
-        margin-left: 5rem;
+        margin-left: 10rem;
     }
     .f1{
         margin-left: -2rem;
@@ -484,7 +527,6 @@ justify-content: space-around;
         width: 15rem;
     }
     body{
-        /* width: fit-content; */
     }
 }
 
