--- a/index.css
+++ b/index.css
@@ -642,10 +642,7 @@ body{
     /* background-color: red; */
 }
 
-button{
-    /* position: sticky; */
-    /* margin-left: 25rem; */
-}
+
 .twoone{
     margin-left: 7rem;
 }
@@ -658,7 +655,8 @@ button{
 }
 
 .twodiv{
-    padding-left: 1rem;
+    /* padding-left: 5rem; */
+    margin-left: 5rem;
 }
 }
 
