--- a/index.css
+++ b/index.css
@@ -655,8 +655,8 @@ body{
 }
 
 .twodiv{
-    /* padding-left: 5rem; */
-    margin-left: 5rem;
+    padding-left: 8rem;
+    /* margin-left: 5rem; */
 }
 }
 
