--- a/index.css
+++ b/index.css
@@ -139,7 +139,7 @@ td span{
     color: white;
     padding-top: .5rem;
     padding-bottom: .5rem;
-    /* margin-left: 35rem; */
+    margin-left: 35rem;
     border: 0;
     border-radius: .4rem;
 
