--- a/index.css
+++ b/index.css
@@ -140,6 +140,7 @@ td span{
     padding-top: .5rem;
     padding-bottom: .5rem;
     margin-left: 35rem;
+    /* border: 2px solid red; */
     border: 0;
     border-radius: .4rem;
 
