--- a/index.css
+++ b/index.css
@@ -499,7 +499,7 @@ html{
     font-size: 40%;
 }
 .viewbtn{
-    /* margin-left: 22rem; */
+    margin-left: 22rem;
 }
 .fa-arrow-down{
     font-size: 1.5rem;
